--- a/myCSS.css
+++ b/myCSS.css
@@ -1,9 +1,14 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
-body {
+body{
 	margin: 0 auto;
 }
 .homePage {
+	 font: 100%/1.4 Courier, monospace, Helvetica, sans-serif;
+     background-color: #FFFFFF;
+     margin: 0;
+     padding: 0;
+     color: #000;
 	background: #FFCE61;
 }
 .container {
